--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ quarkus.minio.port=9000
 quarkus.minio.secure=false
 quarkus.minio.access-key=29pscKzbana3d7Fx35TQ
 quarkus.minio.secret-key=uBQgna7prJc5XOiETu2JjyIpXDu3ceTIDQB9VEzt
+# Increase maximum file size (e.g., to 20MB)
+quarkus.http.limits.max-body-size=20M
 quarkus.websocket.dispatch-to-worker=true
 quarkus.swagger-ui.path=/swagger
