added max minio file size config to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,10 @@ quarkus.minio.access-key=29pscKzbana3d7Fx35TQ
 quarkus.minio.secret-key=uBQgna7prJc5XOiETu2JjyIpXDu3ceTIDQB9VEzt
 # Increase maximum file size (e.g., to 20MB)
 quarkus.http.limits.max-body-size=20M
+# Configure multipart settings
+quarkus.http.body.handle-file-uploads=true
+quarkus.http.body.uploads-directory=uploads
+quarkus.http.body.delete-uploaded-files-on-end=true
+
 quarkus.websocket.dispatch-to-worker=true
 quarkus.swagger-ui.path=/swagger
